add demo controller classes in security directory